@@ -1,6 +1,6 @@
 /* Test driver for thwbrk 
  *
- * $Id: test_thwbrk.c,v 1.11 2007-06-11 05:13:55 thep Exp $
+ * $Id: test_thwbrk.c,v 1.12 2007-06-12 13:26:02 thep Exp $
  */
 
 #define MAXLINELENGTH 1000
@@ -41,8 +41,8 @@ int main (int argc, char* argv[])
     }
   }
   printf ("\n");
-  if (numCut != 8) { 
-    printf ("Error! Should have 8 cut points.\n Test th_wbrk() failed...\n");
+  if (numCut != 7) { 
+    printf ("Error! Should have 7 cut points.\n Test th_wbrk() failed...\n");
     exit (-1);
   }
 	
@@ -55,8 +55,8 @@ int main (int argc, char* argv[])
 
   printf ("Return value from th_wbrk_line is %d\n", outputLength);
   printf ("Output string length is %d\n", wcslen(uout));
-  if (outputLength != 72) {
-    printf ("Error! Output string length != 72. "
+  if (outputLength != 67) {
+    printf ("Error! Output string length != 67. "
             "Test th_wbrk_line() failed...\n");
     exit (-1);
   }
